--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,17 @@
     "maximebf/debugbar": "^1.22"
   },
   "require-dev": {
+    "pestphp/pest": "^2.34",
     "phpstan/phpstan": "^1.11"
   },
   "autoload": {
     "psr-4": {
       "Example\\": "app/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
     }
   },
   "config": {
