--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html/app;
+    root /var/www/html/public;
     index index.php;
 
     location / {
