--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,3 +3,10 @@ parameters:
         -
             message: '#Undefined variable: \$this.*#'
             path: tests/*
+
+        -
+            message: '#Property Tests\\TestCase::\$app with generic class *#'
+            path: tests/*
+
+includes:
+	- vendor/phpstan/phpstan/conf/bleedingEdge.neon
