--- a/compose.yaml
+++ b/compose.yaml
@@ -12,32 +12,19 @@ services:
       - mynetwork
 
   php:
-    image: php:8.2-fpm
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: php
     volumes:
       - '.:/var/www/html'
     networks:
       - mynetwork
-
-  composer:
-    image: composer:latest
-    container_name: composer
-    volumes:
-      - .:/app
-    working_dir: /app
-    command: [ "composer" ]
-    networks:
-      - mynetwork
-
-  phpstan:
-    image: composer:latest
-    container_name: phpstan
-    volumes:
-      - .:/app
-    working_dir: /app
-    entrypoint: [ "vendor/bin/phpstan" ]
-    networks:
-      - mynetwork
+    environment:
+      - DB_HOST=${DB_HOST}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
 
   cli:
     image: composer:latest
@@ -57,6 +44,35 @@ services:
     networks:
       - mynetwork
 
+  db:
+    image: mysql:8.0
+    container_name: app_db
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+    networks:
+      - mynetwork
+
+  adminer:
+    image: adminer:latest
+    container_name: adminer
+    restart: unless-stopped
+    ports:
+      - "3333:8080"
+    depends_on:
+      - db
+    networks:
+      - mynetwork
+
 networks:
   mynetwork:
     driver: bridge
+
+volumes:
+  db_data:
