--- a/compose.yaml
+++ b/compose.yaml
@@ -27,13 +27,20 @@ services:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
 
   cli:
-    image: composer:latest
+    build:
+      context: .
+      dockerfile: php.Dockerfile
     container_name: cli
     volumes:
       - .:/app
     working_dir: /app
     networks:
       - mynetwork
+    environment:
+      - DB_HOST=${DB_HOST}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
 
   k6:
     image: grafana/k6:latest
