--- a/compose.yaml
+++ b/compose.yaml
@@ -56,6 +56,7 @@ services:
     container_name: app_db
     restart: unless-stopped
     environment:
+      MYSQL_ROOT_PASSWORD: xxx
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
